[www.hackercamp.cz] Added navigation link

--- a/www.hackercamp.cz/src/html/index.njk
+++ b/www.hackercamp.cz/src/html/index.njk
@@ -421,6 +421,7 @@
       </svg>
     </div>
     <div class="hc-navbar__right mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop">
+      <a class="hc-link hc-navbar__link" href="https://g.page/sobenak?share">Navigovat</a>
       <a class="hc-link hc-navbar__link" href="/faq/">Často kladené dotazy</a>
       <a
         class="hc-link hc-link--decorated"
@@ -444,12 +445,12 @@
           z&nbsp;české tech scény.
         </p>
         <p>2.&ndash;5. září 2021 na Sobeňáku</p>
+        <p>Vjezd do areálu je chráněn značkou zákaz vjezdu. Nelekni se. Ta napovídá správný směr. Pokračuj</p>
         <p>
           <a
-            href="https://docs.google.com/forms/d/e/1FAIpQLSeDdZ5ZLSxS6lVXM4jshT8fBFQkMVww3jT5etoAPf8aK0yK0A/viewform"
+            href="https://g.page/sobenak?share"
             class="hc-cta"
-          >Chci se zapojit</a
-          >
+          >Navigovat</a>
         </p>
       </div>
       <div
