[www.hackercamp.cz] Added program

--- a/www.hackercamp.cz/src/html/faq/index.njk
+++ b/www.hackercamp.cz/src/html/faq/index.njk
@@ -435,6 +435,8 @@
       </svg>
     </div>
     <div class="hc-navbar__right mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop">
+      <a class="hc-link hc-navbar__link" href="https://g.page/sobenak?share">Navigovat</a>
+      <a class="hc-link hc-navbar__link" href="/program/">Program</a>
       <a
         class="hc-link hc-link--decorated"
         href="https://docs.google.com/forms/d/e/1FAIpQLSeDdZ5ZLSxS6lVXM4jshT8fBFQkMVww3jT5etoAPf8aK0yK0A/viewform"
@@ -913,11 +915,11 @@
       <div property="suggestedAnswer acceptedAnswer" typeof="Answer">
         <div property="text">
           <p>Letošnímu Hacker campu říkáme nultý ročník, protože je to pro nás takový experiment,
-            chceme zkusit něco úplně nového, co si půjčuje hodně konceptů z jiných super akcí. 
-            No a protože je to trochu MVP, tak jsme se rozhodli odříznout další jazyk, všechen program 
-            je proto v češtině, všichni zatím přihlášení mluví česky. Na hacker campu je už teď milion 
-            návrhů na program, který nepotřebuje rozumět češtině, od natáčení podcastu po sport a biohacking. 
-            Do budoucna chceme určitě být akce i pro vaše zahraniční kámoše, expaty a mezinárodní týmy, tento 
+            chceme zkusit něco úplně nového, co si půjčuje hodně konceptů z jiných super akcí.
+            No a protože je to trochu MVP, tak jsme se rozhodli odříznout další jazyk, všechen program
+            je proto v češtině, všichni zatím přihlášení mluví česky. Na hacker campu je už teď milion
+            návrhů na program, který nepotřebuje rozumět češtině, od natáčení podcastu po sport a biohacking.
+            Do budoucna chceme určitě být akce i pro vaše zahraniční kámoše, expaty a mezinárodní týmy, tento
             rok jsme ale co se jazyka týče CZ only.</p>
         </div>
       </div>
