[www.hackercamp.cz] Program corrections

--- a/www.hackercamp.cz/src/html/program/index.njk
+++ b/www.hackercamp.cz/src/html/program/index.njk
@@ -467,21 +467,22 @@
 
       <h2 id="toc-patek-3-9">Pátek 3.&nbsp;9.</h2>
 
-      <p>Snídaně 8&nbsp;&ndash; 10&nbsp;Ranní pohybové aktivity</p>
+      <p>Snídaně 8&nbsp;&ndash; 10<br>
+        Ranní pohybové aktivity</p>
 
-      <p>10:00 Ofiko start dne → main stage<br>
+      <p>10:00 Ofiko start dne → mainframe<br>
         10:30 C-level talk (Havryluk, Bartoš, Krátký)<br>
         Výběh na&nbsp;Prahu</p>
 
       <p>Oběd 12&ndash;14</p>
 
-      <p>14:00 sejdeme se u&nbsp;main stage<br>
+      <p>14:00 sejdeme se u&nbsp;mainframe<br>
         14:30 Agentury a vlastní produkty<br>
         14:30 Lidi, komunity a komuniakce<br>
         14:30 Revolt.bi a mašina na karty<br>
         BioHacking lidí&nbsp;&ndash; Formánek</p>
 
-      <p>16:00 sejdeme se u&nbsp;main stage<br>
+      <p>16:00 sejdeme se u&nbsp;mainframe<br>
         16:30 Právní aspekty v&nbsp;IT<br>
         16:30 Tech blok (Čurn, Suk, Matas, Belada, Bečvářová)<br>
         Radar</p>
@@ -494,9 +495,10 @@
 
       <h2 id="toc-sobota-4-9">Sobota 4.&nbsp;9.</h2>
 
-      <p>Snídaně 8&nbsp;&ndash; 10&nbsp;Ranní pohybové aktivity</p>
+      <p>Snídaně 8&nbsp;&ndash; 10
+        <br>Ranní pohybové aktivity</p>
 
-      <p>10:00 Ofiko start dne → main stage<br>
+      <p>10:00 Ofiko start dne → mainframe<br>
         10:30 Data a Tech (Bláha, Hána, Slisík)<br>
         10:30 Ženy v&nbsp;IT<br>
         11:00 The one Idea (Roček)<br>
@@ -504,16 +506,16 @@
 
       <p>Oběd 12&ndash;14</p>
 
-      <p>14:00 sejdeme se u&nbsp;main stage<br>
+      <p>14:00 sejdeme se u&nbsp;mainframe<br>
         14:30 Jak dělat dobro projekty dobře<br>
         14:30 Dynamické programnování (Danilák)<br>
         Sporty u&nbsp;vody</p>
 
-      <p>16:00 sejdeme se u&nbsp;main stage<br>
+      <p>16:00 sejdeme se u&nbsp;mainframe<br>
         16:30 Jak podpořit české startup prostředí<br>
         16:30 Druhé kolo lightning talks<br>
         17:40 Vyhlášení CTF eventu<br>
-        18:00 sejdeme se u&nbsp;main stage → ofiko zakončení a&nbsp;talks</p>
+        18:00 sejdeme se u&nbsp;mainframe → ofiko zakončení a&nbsp;talks</p>
 
       <p>Večeře 18&nbsp;&ndash; 20</p>
 
