[www.hackercamp.cz] Navbar fixes

--- a/www.hackercamp.cz/src/html/faq/index.njk
+++ b/www.hackercamp.cz/src/html/faq/index.njk
@@ -294,6 +294,11 @@
       z-index: 1000;
     }
 
+    .hc-navbar__link {
+      line-height: 56px;
+      margin-right: 2em;
+    }
+
     #top {
       padding-top: 78px;
     }
