--- a/www.hackercamp.cz/src/html/program/index.njk
+++ b/www.hackercamp.cz/src/html/program/index.njk
@@ -294,6 +294,11 @@
       z-index: 1000;
     }
 
+    .hc-navbar__link {
+      line-height: 56px;
+      margin-right: 2em;
+    }
+
     #top {
       padding-top: 78px;
     }
@@ -332,24 +337,6 @@
     h1 {
       text-align: center;
       margin-top: 2em;
-    }
-    [typeof="Question"]:target {
-      scroll-margin-top: 7em;
-    }
-    [typeof="Question"] [property="name"] {
-      padding-right: 48px;
-      margin: 0;
-    }
-    [typeof="Question"]:target [property="name"]{
-      border-bottom: 1px solid #f2f2f2;
-      padding-bottom: 32px;
-      margin-bottom: 32px;
-    }
-    [typeof="Question"] [typeof="Answer"] {
-      display:none;
-    }
-    [typeof="Question"]:target [typeof="Answer"] {
-      display: block;
     }
 
   </style>
