--- a/postcube.cz/src/html/jak-box-funguje/index.njk
+++ b/postcube.cz/src/html/jak-box-funguje/index.njk
@@ -256,9 +256,9 @@
                 </button>
               </div>
               <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop">
-                <button class="mdc-button content-btn" disabled="disabled">
-                  <span class="mdc-button__label" target="_blank" rel="noopener">Již brzy i pro iPhone</span>
-                </button>
+                <a href="#" class="mdc-button content-btn" disabled="disabled" target="_blank" rel="noopener">
+                  <span class="mdc-button__label" >Již brzy i pro iPhone</span>
+                </a>
               </div>
               <div class="accordion mdc-layout-grid__cell mdc-layout-grid__cell--span-12-desktop">
                 <div>
