--- a/postcube.cz/src/html/prepravci/index.njk
+++ b/postcube.cz/src/html/prepravci/index.njk
@@ -33,7 +33,9 @@
       font-size: 24px;
       text-decoration: none;
     }
-    .about .icon-section__content svg, .transport .icon-section__content svg, .icon-section .icon-section__content svg{
+    .about .icon-section__content svg,
+    .transport .icon-section__content svg,
+    .icon-section .icon-section__content svg {
       min-height: 48px;
     }
     @media (max-width: 839px) {
@@ -84,15 +86,21 @@
         </div>
         <div class="main-info__bg mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop">
           <picture>
-            <source media="screen and (max-width: 399px)" srcset="{{ deliveryman | cloudinaryUrl(width=400) }} 1x,
-                      {{ box_header | cloudinaryUrl(width=400) }} 1.5x,
-                      {{ box_header | cloudinaryUrl(width=400) }} 2x">
-            <source media="screen and (min-width: 400px) and (max-width: 599px)" srcset="{{ deliveryman | cloudinaryUrl(width=420) }} 1x,
-                {{ box_n_woman | cloudinaryUrl(width=600) }} 1.5x,
-                {{ box_n_woman | cloudinaryUrl(width=600) }} 2x">
-            <source media="screen and (min-width: 840px)" srcset="{{ deliveryman | cloudinaryUrl(width=860) }} 1x,
-                {{ box_n_woman | cloudinaryUrl(width=860) }} 1.5x,
-                {{ box_n_woman | cloudinaryUrl(width=860) }} 2x">
+            <source
+              media="screen and (max-width: 399px)"
+              srcset="{{ deliveryman | cloudinaryUrl(width=400) }} 1x,
+                      {{ box_header | cloudinaryUrl(width=400, dpr=1.5) }} 1.5x,
+                      {{ box_header | cloudinaryUrl(width=400, dpr=2) }} 2x">
+            <source
+              media="screen and (min-width: 400px) and (max-width: 599px)"
+              srcset="{{ deliveryman | cloudinaryUrl(width=420) }} 1x,
+                      {{ box_n_woman | cloudinaryUrl(width=600, dpr=1.5) }} 1.5x,
+                      {{ box_n_woman | cloudinaryUrl(width=600, dpr=2) }} 2x">
+            <source
+              media="screen and (min-width: 840px)"
+              srcset="{{ deliveryman | cloudinaryUrl(width=860) }} 1x,
+                      {{ box_n_woman | cloudinaryUrl(width=860, dpr=1.5) }} 1.5x,
+                      {{ box_n_woman | cloudinaryUrl(width=860, dpr=2) }} 2x">
             <img alt="Fotka PostCube" loading="lazy" src="{{ deliveryman | cloudinaryUrl }}" width="860" height="574">
           </picture>
         </div>
@@ -137,21 +145,29 @@
   {% include 'components/guarantee.njk' %}
   <div class="guarantee__bg">
     <picture>
-      <source media="screen and (min-width: 839px)" srcset="{{ prepravciBG01 | cloudinaryUrl(width=420) }} 1x,
-                {{ domacnostiBG01 | cloudinaryUrl(width=420) }} 1.5x,
-                {{ domacnostiBG01 | cloudinaryUrl(width=420) }} 2x">
-      <source media="screen and (min-width: 840px)" srcset="{{ prepravciBG01 | cloudinaryUrl(width=860) }} 1x,
-                {{ domacnostiBG01 | cloudinaryUrl(width=860) }} 1.5x,
-                {{ domacnostiBG01 | cloudinaryUrl(width=860) }} 2x">
+      <source
+        media="screen and (min-width: 839px)"
+        srcset="{{ prepravciBG01 | cloudinaryUrl(width=420) }} 1x,
+                {{ domacnostiBG01 | cloudinaryUrl(width=420, dpr=1.5) }} 1.5x,
+                {{ domacnostiBG01 | cloudinaryUrl(width=420, dpr=2) }} 2x">
+      <source
+        media="screen and (min-width: 840px)"
+        srcset="{{ prepravciBG01 | cloudinaryUrl(width=860) }} 1x,
+                {{ domacnostiBG01 | cloudinaryUrl(width=860, dpr=1.5) }} 1.5x,
+                {{ domacnostiBG01 | cloudinaryUrl(width=860, dpr=2) }} 2x">
       <img alt="Fotografie PostCube u domu" src="{{ prepravciBG01 | cloudinaryUrl(width=860) }}" width="860" height="573">
     </picture>
     <picture>
-      <source media="screen and (min-width: 839px)" srcset="{{ prepravciBG02 | cloudinaryUrl(width=420) }} 1x,
-                {{ domacnostiBG02 | cloudinaryUrl(width=420) }} 1.5x,
-                {{ domacnostiBG02 | cloudinaryUrl(width=420) }} 2x">
-      <source media="screen and (min-width: 840px)" srcset="{{ prepravciBG02 | cloudinaryUrl(width=860) }} 1x,
-                {{ domacnostiBG02 | cloudinaryUrl(width=860) }} 1.5x,
-                {{ domacnostiBG02 | cloudinaryUrl(width=860) }} 2x">
+      <source
+        media="screen and (min-width: 839px)"
+        srcset="{{ prepravciBG02 | cloudinaryUrl(width=420) }} 1x,
+                {{ domacnostiBG02 | cloudinaryUrl(width=420, dpr=1.5) }} 1.5x,
+                {{ domacnostiBG02 | cloudinaryUrl(width=420, dpr=2) }} 2x">
+      <source
+        media="screen and (min-width: 840px)"
+        srcset="{{ prepravciBG02 | cloudinaryUrl(width=860) }} 1x,
+                {{ domacnostiBG02 | cloudinaryUrl(width=860, dpr=1.5) }} 1.5x,
+                {{ domacnostiBG02 | cloudinaryUrl(width=860, dpr=2) }} 2x">
       <img alt="Fotografie PostCube ve vašem domě" src="{{ prepravciBG02 | cloudinaryUrl(width=860) }}" width="860" height="573">
     </picture>
   </div>
