[postcube.cz] More fixes

--- a/postcube.cz/src/html/domacnosti/index.njk
+++ b/postcube.cz/src/html/domacnosti/index.njk
@@ -89,18 +89,18 @@
             <source
               media="screen and (max-width: 399px)"
               srcset="{{ domacnostiPC | cloudinaryUrl(width=400) }} 1x,
-                      {{ box_header | cloudinaryUrl(width=400, dpr=1.5) }} 1.5x,
-                      {{ box_header | cloudinaryUrl(width=400, dpr=2) }} 2x">
+                      {{ domacnostiPC | cloudinaryUrl(width=400, dpr=1.5) }} 1.5x,
+                      {{ domacnostiPC | cloudinaryUrl(width=400, dpr=2) }} 2x">
             <source
               media="screen and (min-width: 400px) and (max-width: 599px)"
               srcset="{{ domacnostiPC | cloudinaryUrl(width=420) }} 1x,
-                      {{ box_n_woman | cloudinaryUrl(width=600, dpr=1.5) }} 1.5x,
-                      {{ box_n_woman | cloudinaryUrl(width=600, dpr=2) }} 2x">
+                      {{ domacnostiPC | cloudinaryUrl(width=600, dpr=1.5) }} 1.5x,
+                      {{ domacnostiPC | cloudinaryUrl(width=600, dpr=2) }} 2x">
             <source
               media="screen and (min-width: 840px)"
               srcset="{{ domacnostiPC | cloudinaryUrl(width=860) }} 1x,
-                      {{ box_n_woman | cloudinaryUrl(width=860, dpr=1.5) }} 1.5x,
-                      {{ box_n_woman | cloudinaryUrl(width=860, dpr=2) }} 2x">
+                      {{ domacnostiPC | cloudinaryUrl(width=860, dpr=1.5) }} 1.5x,
+                      {{ domacnostiPC | cloudinaryUrl(width=860, dpr=2) }} 2x">
             <img alt="Fotka PostCube" loading="lazy" src="{{ domacnostiPC | cloudinaryUrl }}" width="860" height="574">
           </picture>
         </div>
