--- a/postcube.cz/src/html/o-nas/index.njk
+++ b/postcube.cz/src/html/o-nas/index.njk
@@ -160,8 +160,9 @@
         </div>
       </div>
         <a href="https://goo.gl/maps/SBK1BRsmgu22" class="map" title="Show Prague Office on map"  target="_blank" rel="noopener">
-          <img  alt="[mapa] Praha Spořilov"
-                src="{{ contactMap | cloudinaryUrl(dpr="auto", width=1296) }}" width="860" height="581">
+          <img alt="[mapa] Praha Spořilov"
+               src="{{ contactMap | cloudinaryUrl(dpr="auto", width=1296) }}"
+               width="860" height="581">
         </a>
     </div>
   </section>
