ARX - Team - Změna pozice obsahu v intro

--- a/arx.monks.cloud/src/html/team/index.njk
+++ b/arx.monks.cloud/src/html/team/index.njk
@@ -52,10 +52,11 @@
       .intro {
         align-self: center;
         background-image: url({{ "/arx.monks.cloud/team-header.jpg" | cloudinaryUrl(width=860) }});
-        background-size: 65% auto;
+        background-size: 55% 70%;
         background-position: center right;
         background-repeat: no-repeat;
         min-height: 680px;
+        margin-bottom: 4em;
       }
     }
     @media (min-width: 1840px) {
