Postcube - Úpravy velikosti obrázků v podstránce domácnosti

--- a/postcube.cz/src/html/domacnosti/index.njk
+++ b/postcube.cz/src/html/domacnosti/index.njk
@@ -154,29 +154,29 @@
   <div class="guarantee__bg">
     <picture>
       <source
-        media="screen and (min-width: 839px)"
+        media="screen and (max-width: 839px)"
         srcset="{{ domacnostiBG01 | cloudinaryUrl(width=420) }} 1x,
                 {{ domacnostiBG01 | cloudinaryUrl(width=420, dpr=1.5) }} 1.5x,
                 {{ domacnostiBG01 | cloudinaryUrl(width=420, dpr=2) }} 2x">
       <source
         media="screen and (min-width: 840px)"
-        srcset="{{ domacnostiBG01 | cloudinaryUrl(width=860) }} 1x,
-                {{ domacnostiBG01 | cloudinaryUrl(width=860, dpr=1.5) }} 1.5x,
-                {{ domacnostiBG01 | cloudinaryUrl(width=860, dpr=2) }} 2x">
-      <img alt="Fotografie PostCube u domu" src="{{ domacnostiBG01 | cloudinaryUrl(width=860) }}" width="860" height="573">
+        srcset="{{ domacnostiBG01 | cloudinaryUrl(width=840, height=560) }} 1x,
+                {{ domacnostiBG01 | cloudinaryUrl(width=840, height=560, dpr=1.5) }} 1.5x,
+                {{ domacnostiBG01 | cloudinaryUrl(width=840, height=560, dpr=2) }} 2x">
+      <img alt="Fotografie PostCube u domu" src="{{ domacnostiBG01 | cloudinaryUrl(width=840, height=560) }}" width="840" height="560">
     </picture>
     <picture>
       <source
-        media="screen and (min-width: 839px)"
+        media="screen and (max-width: 839px)"
         srcset="{{ domacnostiBG02 | cloudinaryUrl(width=420) }} 1x,
                 {{ domacnostiBG02 | cloudinaryUrl(width=420, dpr=1.5) }} 1.5x,
                 {{ domacnostiBG02 | cloudinaryUrl(width=420, dpr=2) }} 2x">
       <source
         media="screen and (min-width: 840px)"
-        srcset="{{ domacnostiBG02 | cloudinaryUrl(width=860) }} 1x,
-                {{ domacnostiBG02 | cloudinaryUrl(width=860, dpr=1.5) }} 1.5x,
-                {{ domacnostiBG02 | cloudinaryUrl(width=860, dpr=2) }} 2x">
-      <img alt="Fotografie PostCube ve vašem domě" src="{{ domacnostiBG02 | cloudinaryUrl(width=860) }}" width="860" height="573">
+        srcset="{{ domacnostiBG02 | cloudinaryUrl(width=840, height=560) }} 1x,
+                {{ domacnostiBG02 | cloudinaryUrl(width=840, height=560, dpr=1.5) }} 1.5x,
+                {{ domacnostiBG02 | cloudinaryUrl(width=840, height=560, dpr=2) }} 2x">
+      <img alt="Fotografie PostCube ve vašem domě" src="{{ domacnostiBG02 | cloudinaryUrl(width=840, height=560) }}" width="840" height="560">
     </picture>
   </div>
 
