Hookamonk V2 - Implementace buttons
CSS and HTML

--- a/www.hookamonk.com/src/html/v2/index.njk
+++ b/www.hookamonk.com/src/html/v2/index.njk
@@ -35,6 +35,9 @@
           <p class="title__prefix">Design anything, build everything</p>
           <h1>Game changer in hookah world</h1>
           <p class="title__suffix">First fully electronic hookah set for tobacco</p>
+          <button class="button button__contained button__contained--dark">
+            <a href="#" class="button__label">Next</a>
+          </button>
         </div>
       </div>
     </div>
@@ -190,12 +193,18 @@
           <h4>Fringilla ipsum tincidunt</h4>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fringilla ipsum tincidunt proin tellus vestibulum
             scelerisque eu.</p>
+          <button class="button button__contained button__contained--green">
+            <a href="#" class="button__label">Next</a>
+          </button>
         </div>
         <div class="hm-warp__type mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop">
           <h3>B2C</h3>
           <h4>Fringilla ipsum tincidunt</h4>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fringilla ipsum tincidunt proin tellus vestibulum
             scelerisque eu.</p>
+          <button class="button button__contained button__contained--orange">
+            <a href="#" class="button__label">Next</a>
+          </button>
         </div>
       </div>
     </div>
