--- a/www.hookamonk.com/src/stylesheets/v2/typography.scss
+++ b/www.hookamonk.com/src/stylesheets/v2/typography.scss
@@ -80,3 +80,52 @@ body {
   line-height: 30px;
   color: var(--hm-grey);
 }
+
+.button {
+  border-radius: 4px;
+  a {
+    font-size: 18px;
+    font-weight: 700;
+    text-decoration: none;
+  }
+
+  @media (min-width: 480px) {
+    padding: 12px 64px;
+  }
+  @media (max-width: 479px) {
+    width: 100%;
+    height: 54px;
+  }
+  &:hover {
+    cursor: pointer;
+  }
+}
+
+.button__contained {
+  border: none;
+}
+
+.button__contained--dark {
+  background-color: var(--hm-grey--dark);
+  a {
+    color: var(--hm-white);
+  }
+  &:hover {
+    opacity: 44%;
+    transition: all 0.8s;
+  }
+}
+
+.button__contained--green {
+  background-color: var(--hm-green--light);
+  a {
+    color: var(--hm-grey--dark);
+  }
+}
+
+.button__contained--orange {
+  background-color: var(--hm-orange--light);
+  a {
+    color: var(--hm-grey--dark);
+  }
+}
