--- a/www.hookamonk.com/src/stylesheets/v2/catering.scss
+++ b/www.hookamonk.com/src/stylesheets/v2/catering.scss
@@ -80,6 +80,12 @@
       margin-top: 2em;
     }
   }
+  .hm-warp__type .hm-warp__type--b2b {
+
+  }
+  .hm-warp__type .hm-warp__type--b2c {
+
+  }
 }
 
 //
